Enabled downloading of archives, fixed bug causing hanging bundles after uninstall
Change-Id: If1b2012b125e8f87d7e53b8151030594d7e93071
Signed-off-by: Tomas Janciga <tjanciga@cisco.com>